2022-09-17  Nikita Ivanov <nikita.vyach.ivanov@gmail.com>

	* mm/ms.cov (cov@print-title, cov@print-authors): Escape
	newlines when beginning conditional blocks.

	Fixes <https://savannah.gnu.org/bugs/?63075>.  [Problems
	introduced by me in commits 59d1fd7a5e and 4fd984adc9, both
	2021-07-17. --GBR]

2022-09-16  Nikita Ivanov <nikita.vyach.ivanov@gmail.com>

	* m.tmac (misc@ev-keep): Select configured default font family,
	as with `.fam H` at the top of the document, for example, when
	switching to new environment.

	Fixes <https://savannah.gnu.org/bugs/?63067>.

2022-08-14  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac (PY): Add new macro.
	(PE): Replace `init@reset` call with `PY` (and then space by
	half a vee as before).

	* groff_mm.7.man (PY): Document it.

	Fixes <https://savannah.gnu.org/bugs/?62900>.

2022-08-14  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac (@warning, @error): Stop pointlessly using no-break
	control character when invoking the `tm` request, which never
	causes a break in formatted output.  (Management of the standard
	output and standard error streams is the user's responsibility.)
	(@error): Drop old-fashioned asterisk banners around error
	diagnostics.  Stop invoking `ab` with redundant and sometimes
	misleading arguments.  In groff 1.23, `ab` exits silently if
	given none.  We've already issued a diagnostic and moreover not
	all problems are with "syntax"; some are semantic.

2022-08-14  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac (PS): Validate better; check for 2 arguments exactly.

2022-08-14  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac (PS): Refactor; drop dead code.  The `pic*in` register
	was used only for dead stores; it was never read or tested.

2022-08-04  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac (initialization): In nroff mode, surround automatically
	numbered footnote markers in body text with square brackets, as