@@ -66,7 +66,8 @@ mm_TESTS = \
   contrib/mm/tests/MT_5_includes_AT_in_SG.sh \
   contrib/mm/tests/ms_cover_sheet_robust_to_missing_AF.sh \
   contrib/mm/tests/place-equation-labels-correctly-in-displays.sh \
-  contrib/mm/tests/remove-stale-bib-entry-data.sh
+  contrib/mm/tests/remove-stale-bib-entry-data.sh \
+  contrib/mm/tests/short-pages-do-not-overflow-stack.sh
 TESTS += $(mm_TESTS)
 EXTRA_DIST += \
   $(mm_TESTS) \
