@@ -1,3 +1,10 @@
+2022-10-02  G. Branden Robinson <g.branden.robinson@gmail.com>
+
+	Regression-test Savannah #24048.
+
+	* tests/short-pages-do-not-overflow-stack.sh: Test it.
+	* mm.am (mm_TESTS): Run test.
+
 2022-09-17  Nikita Ivanov <nikita.vyach.ivanov@gmail.com>
 
 	* mm/ms.cov (cov@print-title, cov@print-authors): Escape
